--- a/package.json
+++ b/package.json
@@ -41,6 +41,6 @@
       "last 1 safari version"
     ]
   },
-  "main": "http://localhost:4444",
-  "proxy": "/server/index.js"
+  "main": "server/index.js",
+  "proxy": "http://localhost:4444"
 }
