--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
+    "aws-sdk": "^2.637.0",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
@@ -16,10 +17,13 @@
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
+    "react-s3": "^1.3.1",
     "react-scripts": "3.4.0",
+    "react-toastify": "^5.5.0",
     "redux": "^4.0.5",
     "redux-promise-middleware": "^6.1.2",
-    "sass": "^1.26.2"
+    "sass": "^1.26.2",
+    "uuid": "^7.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
